Added references to autolinker in examples; small refactorings for friendly formatting service

--- a/examples/all_controls/index.html
+++ b/examples/all_controls/index.html
@@ -20,6 +20,7 @@
 <script type="text/javascript" src="/bower_components/angular-aria/angular-aria.js"></script>
 <script type="text/javascript" src="/bower_components/angular-touch/angular-touch.js"></script>
 <script type="text/javascript" src="/bower_components/ckeditor/ckeditor.js"></script>
+<script type="text/javascript" src="/bower_components/Autolinker.js/dist/Autolinker.js"></script>
 <!-- here you can add additional CKEditor modules and plugins -->
 <script type="text/javascript" src="/bower_components/codemirror/lib/codemirror.js"></script>
 <!-- here you can add additional CodeMirror modules and plugins -->
